# flask-mini-web

./: README.md  app.py  pyproject.toml
FlaskProject/: app.py  pyproject.toml
FlaskProject/templates/: index.html  login.html
templates/: fileupload.html  home.html  incorrect.html  login.html  main.html
