[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = ""
authors = ["thihathura <thihathura@ytechnologies.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
requests = "^2.32.3"
panda = "^0.3.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
